--- a/www/teams.html
+++ b/www/teams.html
@@ -9,7 +9,7 @@
 	  <meta name="keywords" content="web design, affordable web design, professional web design">
   	<meta name="author" content="Tom Newman">
     <title>PLL 2021 Season | Teams</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
 	  <header>
