fix image syntax

--- a/www/index.html
+++ b/www/index.html
@@ -62,7 +62,7 @@ We also add the images to the img folder
             <p>The PLL was launched when Paul Rabil and other investors were attempting to buyout the MLL - but couldn't come to an agreement.</p>
           </div>
           <div class="box">
-            <img src="./img/rabil.png">
+            <img src="./img/rabil.jpg">
             <h3>Paul Rabil</h3>
             <p>The face of the PLL, Paul Rabil, is a professional lacrosse player who used to play in the MLL. He formed the PLL with his brother Mike.</p>
           </div>
